--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -1,4 +1,4 @@
-\chapter{Tail-Anchored Protein Datasets}
+ope\chapter{Tail-Anchored Protein Datasets}
 \sloppy
 % gls refers to a glossary term, cite refers to an entry from the separate bibtex folder. url is a lazy way of forcing monospaced text. textit is italics. sections and subsections are the headers.
 \section{Abstract}
@@ -76,54 +76,115 @@ That being said, this ``conversion'' step prevents us from directly comparing th
 
 \subsection{Species Variation}
 % Average lines for figure, table for stats
-
-When comparing the average Kyte \& Doolittle~\cite{Kyte1982} hydrophobicity values for the~\gls{tmh}s from humans and mice, \textit{A. thaliana}, and  \textit{S. cerevisiae}, we see little difference between the mean values all at \~2.3-2.6 with the \gls{tmh}, and at \~1.3-1.6 when considering residues in close proximity to the~\gls{tmh} ($\pm$5 residues)(Table~\ref{table:average_species_ta}).
-P$\>$8.30E-2 for all hydrophobic comparisons (Table~\ref{table:speciestableuniprotstats}).
-Indeed, we see no strong observable differences in hydrophobicity ($P-value>8.30E-02$ in the UniProt curated list, Table \ref{table:speciestableuniprotstats}, $P>3.35E-01$ in the SwissProt automatically filtered list).
-
-In single-pass proteins of eukaryotic species there are typically various adaptations of the \gls{tmh} to adhere to the membrane constraints of the specific membrane that can be observed in terms of hydrophobicity~\cite{Sharpe2010}, especially in \gls{tmh} anchors~\cite{Baker2017}.
-However, in these \gls{ta} protein datasets we see no such patterns.
-
-\begin{table}[]
+\begin{figure}[!ht]
 \centering
-\captionof{table}[Average values of species datasets from UniProt manually curated set and SwissProt automatically filtered dataset.]
+\includegraphics[width=1\textwidth]{TA_chapter/species-hydrophobicity}
+\captionof{figure}[Average values of species datasets from UniProt manually curated set and SwissProt automatically filtered dataset.]
 {\textbf{Average values of species datasets from UniProt manually curated set and SwissProt automatically filtered dataset.}
 
-The average hydrophoicity values from the Kyte \& Doolittle scale ~\cite{Kyte1982} and the GlobProt scale \cite{Linding2003} for both the \gls{tmh} and the \gls{tmh}$\pm$5 residues.
-(A) Values for the UniProt manually curated set. We compare the mammalian set of \gls{ta} proteins (Human N=38 and Mouse N=37) to \textit{A. thaliana} (N=60) representing plants  and  \textit{S. cerevisiae} (N=31) representing yeasts.
-(B) Values for the SwissProt filtered set. The mammalian set of \gls{ta} proteins (Human N=46 and Mouse N=48) to \textit{A. thaliana} (N=49) representing plants  and  \textit{S. cerevisiae} (N=24) representing yeasts.
+The average hydrophoicity values from the Kyte \& Doolittle scale ~\cite{Kyte1982} and the GlobProt scale \cite{Linding2003} for both the \gls{tmh} and the \gls{tmh}$\pm$5 residues. Values are shown for both the UniProt manually curated set and the SwissProt filtered set. In the UniProt manually curated set we compare the mammalian set of \gls{ta} proteins (Human N=38 and Mouse N=37) to \textit{A. thaliana} (N=60) representing plants  and  \textit{S. cerevisiae} (N=31) representing yeasts. For the SwissProt filtered set we compare the mammalian set of \gls{ta} proteins (Human N=46 and Mouse N=48) to \textit{A. thaliana} (N=49) representing plants  and  \textit{S. cerevisiae} (N=24) representing yeasts.
+Error bars are shown at $\pm 1 \sigma$ from the mean of the respective dataset.
 }
-\label{average_species_ta}
-\end{table}
 
-Here, we are dealing with datasets at least an order of magnitude smaller than those broad studies which could explain the absence of the effect, however this only goes to show that if there is an effect in \gls{ta} proteins, it is indeed weak.
+\label{fig:average_species_hydrophobicity_ta}
+\end{figure}
+
+When comparing the average Kyte \& Doolittle~\cite{Kyte1982} hydrophobicity values for the~\gls{tmh}s from humans and mice, \textit{A. thaliana}, and  \textit{S. cerevisiae}, we can see little difference between the mean values.
+All of the mean values lie between $\sim$2.3-2.6 when we only consider the \gls{tmh} and at $\sim$1.3-1.6 when considering residues in close proximity to the~\gls{tmh} ($\pm$5 residues) (Figure~\ref{fig:average_species_hydrophobicity_ta}).
+Indeed, we see no strong observable statistical differences in hydrophobicity ($P-value>8.30E-02$ in the UniProt curated list Table \ref{table:speciestableuniprotstats}, $P>3.35E-01$ in the SwissProt automatically filtered list Table \ref{table:speciestableswissprotstats}).
+
+In single-pass proteins of Eukaryotic species there are typically various adaptations of the \gls{tmh} to adhere to the membrane constraints of the specific membrane that can be observed in terms of hydrophobicity~\cite{Sharpe2010}, especially in \gls{tmh} anchors~\cite{Baker2017}.
+However, in these \gls{ta} protein datasets we see no such patterns at this sample size.
+
+Here, we are dealing with datasets at least an order of magnitude smaller than those broad studies which could explain the absence of the effect.
+However this only goes to show that if there is an effect in \gls{ta} proteins, it is indeed weak.
 
 \begin{table}[htbp]
-
 \centering
+\captionof{table}[Hydrophobicity statistical comparisons between mouse and human, yeast, and plants in the SwissProt Filtered Dataset.]
+{\textbf{Hydrophobicity statistical comparisons between mouse and human, yeast, and plants in the SwissProt Filtered Dataset.}
+Here, we compare a mammalian set of \gls{ta} proteins (Human N=46 and Mouse N=48) to \textit{A. thaliana} (N=49) representing plants  and  \textit{S. cerevisiae} (N=24) representing yeasts.
+The hydrophobicity was predicted as the mean average of the values of the sequences of the \gls{tmh}, as well another group including up to $\pm$5 flanking residues predicting the boundary of \gls{tmh}s is difficult, according to the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982}.
+%Disorder was calculated in the same way using the GlobProt scale \cite{Linding2003}.
+The Test column refers to the statistical score obtaineed from the test; H statistic for the Kruskal Wallis, the KS statistic for the Kolmogorov Smirnov test, and the t-statistic for the T-test.
+$P$ is the P-value of that statistical score.
+$B$ refers to the Bahadur slope, an interpretation of the P-value that accounts for the sample size powering the test~\cite{Bahadur1967, Bahadur1971}.}
+\tiny
+	% Table generated by Excel2LaTeX from sheet 'SwissProt filtered species'
 
-\captionof{table}[Statistical comparisons between mouse and human, yeast, and plants in the UniProt Curated Dataset.]
-{\textbf{Statistical comparisons between mouse and human, yeast, and plants in the UniProt Curated Dataset.}
+    \begin{tabular}{clrrrrrrrrr}
+          &       & \multicolumn{3}{c}{Mammal and Plant} & \multicolumn{3}{c}{Mammal and Yeast} & \multicolumn{3}{c}{Plant and Yeast} \\
+          &       & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} \\
+    \multirow{3}[0]{*}{TMH } &  Kruskal-Wallis & 0.93  & 3.35E-01 & 7.64E-03 & 0.10  & 7.56E-01 & 2.37E-03 & 0.84  & 3.60E-01 & 1.40E-02 \\
+          &  Kolmogorov-Smirnov & 0.13  & 6.36E-01 & 3.17E-03 & 0.12  & 9.24E-01 & 6.69E-04 & 0.19  & 5.28E-01 & 8.76E-03 \\
+          &  Student's T-test & -0.86 & 3.90E-01 & 6.58E-03 & 0.21  & 8.31E-01 & 1.57E-03 & 0.79  & 4.33E-01 & 1.15E-02 \\
+    \multirow{3}[0]{*}{TMH and flanks } &  Kruskal-Wallis & 0.04  & 8.52E-01 & 1.12E-03 & 0.12  & 7.28E-01 & 2.69E-03 & 0.04  & 8.33E-01 & 2.51E-03 \\
+          &  Kolmogorov-Smirnov & 0.11  & 7.72E-01 & 1.81E-03 & 0.13  & 8.79E-01 & 1.09E-03 & 0.11  & 9.80E-01 & 2.81E-04 \\
+          &  Student's T-test & -0.22 & 8.23E-01 & 1.37E-03 & -0.38 & 7.04E-01 & 2.97E-03 & -0.19 & 8.50E-01 & 2.22E-03 \\
+    \end{tabular}%
+				\label{table:speciestableswissprotstats}
+
+\end{table}%
+
+\begin{table}[htbp]
+\centering
+\captionof{table}[Hydrophobicity statistical comparisons between mouse and human, yeast, and plants in the UniProt Curated Dataset.]
+{\textbf{Hydrophobicity statistical comparisons between mouse and human, yeast, and plants in the UniProt Curated Dataset.}
 Here, we compare a mammalian set of \gls{ta} proteins (Human N=38 and Mouse N=37) to \textit{A. thaliana} (N=60) representing plants  and  \textit{S. cerevisiae} (N=31) representing yeasts.
 The hydrophobicity was predicted as the mean average of the values of the sequences of the \gls{tmh}, as well another group including up to $\pm$5 flanking residues predicting the boundary of \gls{tmh}s is difficult, according to the Kyte \& Doolittle hydrophobicity scale~\cite{Kyte1982}.
-Disorder was calculated in the same way using the GlobProt scale \cite{Linding2003}.
-The score column refers to the statistical score obtaineed from the test; H statistic for the Kruskal Wallis, the KS statistic for the Kolmogorov Smirnov test, and the t-statistic for the T-test.
-The Bahadur column refers to the Bahadur slope, an interpretation of the P-value that accounts for the sample size powering the test~\cite{Bahadur1967, Bahadur1971}.}
+%Disorder was calculated in the same way using the GlobProt scale \cite{Linding2003}.
+The Test column refers to the statistical score obtaineed from the test; H statistic for the Kruskal Wallis, the KS statistic for the Kolmogorov Smirnov test, and the t-statistic for the T-test.
+$P$ is the P-value of that statistical score.
+$B$ refers to the Bahadur slope, an interpretation of the P-value that accounts for the sample size powering the test~\cite{Bahadur1967, Bahadur1971}.}
+	\tiny
+	% Table generated by Excel2LaTeX from sheet 'SwissProt filtered species'
 
+    \begin{tabular}{clrrrrrrrrr}
+	          &       & \multicolumn{3}{c}{Mammal and Plant} & \multicolumn{3}{c}{Mammal and Yeast} & \multicolumn{3}{c}{Plant and Yeast} \\
+	          &       & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} & \multicolumn{1}{l}{ Test} & \multicolumn{1}{l}{ $P$} & \multicolumn{1}{l}{ $B$} \\
+	    \multirow{3}[0]{*}{TMH } &  Kruskal-Wallis & 2.15  & 1.42E-01 & 1.45E-02 & 0.22  & 6.39E-01 & 4.22E-03 & 2.30  & 1.30E-01 & 2.25E-02 \\
+	          &  Kolmogorov-Smirnov & 0.17  & 2.86E-01 & 9.27E-03 & 0.15  & 6.32E-01 & 4.34E-03 & 0.24  & 1.69E-01 & 1.95E-02 \\
+	          &  Student's T-test & -1.71 & 8.96E-02 & 1.79E-02 & 0.04  & 9.70E-01 & 2.86E-04 & 1.47  & 1.46E-01 & 2.11E-02 \\
+	    \multirow{3}[0]{*}{TMH and flanks } &  Kruskal-Wallis & 2.17  & 1.41E-01 & 1.45E-02 & 0.14  & 7.13E-01 & 3.19E-03 & 0.59  & 4.41E-01 & 9.00E-03 \\
+	          &  Kolmogorov-Smirnov & 0.21  & 8.30E-02 & 1.84E-02 & 0.10  & 9.62E-01 & 3.62E-04 & 0.14  & 8.00E-01 & 2.45E-03 \\
+	          &  Student's T-test & -1.33 & 1.86E-01 & 1.25E-02 & -0.39 & 7.00E-01 & 3.36E-03 & 0.69  & 4.90E-01 & 7.83E-03 \\
+	    \end{tabular}%
+					\label{table:speciestableuniprotstats}
+	\end{table}%
 
-	\label{table:speciestableuniprotstats}
-\end{table}%
 
 \subsection{Organelle Membrane Variation}
 % Average lines for figure, table for stats
 
+When we consider the \gls{ta} proteins at certain locations within the cell ignoring species, we see clear differences in the biochemistry of the \gls{tmh}.
+In the UniProt manually curated dataset, the Kyte \& Doolittle hydrophobicity scores rage from 1.7 in mitochondria to 2.7 in the \gls{pm} (Figure \ref{fig:average_organelle_factors_ta}A).
+Similarly, in the SwissProt filtered dataset the mitochondria lies at 1.9, but it appears to be the golgi apparatus that is the peak at 2.4.
 
+With such a strong hydrophobic difference that, as we saw in the species, may not be solely accounted for by adaptation to the different membrane compositions, it is important to consider if a cryptic targetting signal exists within the \gls{tmh} themselves for \gls{ta} proteins.
+The linguistic sequence entropy of the \gls{tmh} string as well as the disorder were also examined.
+In terms of sequence entropy, there is a marked lack of entropy in the \gls{pm} subset (mean entropy = 3.12 in the \gls{tmh}, 2.6 including $\pm$5 flanking residues) from the UniProt curated dataset compared to the other organelle datasets (entropy $>$ 3.3 and $>$ 2.8 including the flanks).
+However this stark difference cannot be observed in the SwissProt set.
+This is unsurprising given that the hydrophobic nature of the \gls{tmh}s demands that certain residues must be overrepresented, which lowers the sequence entropy.
+In this case, we have a highly hydrophobic set, the \gls{pm} UniProt set, which likely contains a higher proportion of the most hydrophobic residues.
 
+When considering disorder, we see in both datasets that the golgi subset is the most negative at -0.2 with \gls{tmh} and -0.25 with the flanks in both the UniProt manually curated and the SwissProt filtered datasets.
+Whereas mitochondria is the least negative in both cases when considering the \gls{tmh}(-0.14 in UniProt and -0.13 in Swissprot) or the \gls{tmh} and $\pm$5 flanking residues (-0.18 in UniProt and -0.16 in Swissprot).
 
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=1\textwidth]{TA_chapter/organelle-averages}
+\captionof{figure}[Average sequence-based biochemical values of organelle datasets from UniProt manually curated set and SwissProt automatically filtered dataset.]
+{\textbf{Average sequence-based biochemical values of organelle datasets from UniProt manually curated set and SwissProt automatically filtered dataset.}
 
+A) The average hydrophoicity values from the Kyte \& Doolittle scale~\cite{Kyte1982}, B) the average sequence entropy~\cite{Shannon1948} (see methods) and C) the GlobProt scale~\cite{Linding2003} for both the \gls{tmh} and the \gls{tmh}$\pm$5 residues.
+Values are shown for both the UniProt manually curated set and the SwissProt filtered set.
+In the UniProt manually curated set we compare \gls{ta} proteins from the~\gls{er} (N=400) to the Golgi (N=82), the~\gls{pm} (N=37), and the mitochondria (N=401).
+For the SwissProt filtered set we compare \gls{ta} proteins from the~\gls{er} (N=98) to the Golgi (N=82), the~\gls{pm} (N=157), and the mitochondria (N=65).
+Error bars are shown at $\pm 1 \sigma$ from the mean of the respective dataset.
+}
 
-
-
+\label{fig:average_organelle_factors_ta}
+\end{figure}
 
 %\subsection{SNAREs are consistently more hydrophobic across the entire \gls{tmh}}
 % Average lines for figure, table for stats
@@ -135,7 +196,7 @@ The Bahadur column refers to the Bahadur slope, an interpretation of the P-value
 \subsection{Spontaneous insertion may be achieved by polar patches in the \gls{tmh}}
 %Spont TA lines against background dataset.
 
-In addition, predicted insertion machinery dependent TAs with TMHs that are more polar on average than spontaneously inserting~\gls{ta} protein cytochrome b5 have been highlighted.
+%In addition, predicted insertion machinery dependent TAs with TMHs that are more polar on average than spontaneously inserting~\gls{ta} protein cytochrome b5 have been highlighted.
 
 %move on to case studies involving spontaneous insertion?
 
@@ -201,7 +262,7 @@ Proteomes represented by more than 20 records include \textit{A. thaliana} (60 r
 Two subcellular location datasets had no automatically ascribed records and only contained manually annoted SwissProt records; 37 in the \gls{pm} (query \url{locations:(location:"Cell membrane [SL-0039]")}, and 82 in the Golgi (query \url{locations:(location:"Golgi apparatus [SL-0132]")}).
 
 \subsubsection{Remapping Previous Dataset}
-189 of the 411 proteins from the previous study were successfully mapped to 222 UniProtKB IDs using the UniProt mapping tools with the RefSeq Protein to UniProtKB option~\cite{TheUniProtConsortium2014}.
+189 of the 411 proteins from the previous study~\cite{Kalbfleisch2007} were successfully mapped to 222 UniProtKB IDs using the UniProt mapping tools with the RefSeq Protein to UniProtKB option~\cite{TheUniProtConsortium2014}.
 
 \subsection{Calculating Hydrophobicity}
 Windowed hydrophobicity was calculated using a window length of 5 residues, and half windows were permitted.
@@ -230,7 +291,7 @@ These tests were all ran through the Python scipy stat package v0.17 python pack
 To note, the~\gls{ks} test scrutinises for significant maximal absolute differences between distribution curves; the~\gls{kw} test is after skews between distributions and the student t-test statistical test checks the average difference between distributions.
 
 Since the ``P‑value'' is a product of a fraction of a permutated set that exponentially increases as N increases, the P-value is a strong function of N.
-We rely on the (absolute) Bahadur slope (B) as a measure of distance between two distributions~\cite{Bahadur1967, Bahadur1971, Sunyaev1998, Baker2017}:
+We rely on the (absolute) Bahadur slope ($B$) as a measure of distance between two distributions~\cite{Bahadur1967, Bahadur1971, Sunyaev1998, Baker2017}:
 
 \begin{equation} \label{eq:bahadur2}
 B=\frac{|\ln(P~value)|}{N}
