--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -158,7 +158,7 @@ $B$ refers to the Bahadur slope, an interpretation of the P-value that accounts 
 
 When we consider the \gls{ta} proteins at certain locations within the cell ignoring species, we see clear differences in the biochemistry of the \gls{tmh}.
 In the UniProt manually curated dataset, the Kyte \& Doolittle hydrophobicity scores rage from 1.7 in mitochondria to 2.7 in the \gls{pm} (Figure \ref{fig:average_organelle_factors_ta}A).
-Similarly, in the SwissProt filtered dataset the mitochondria lies at 1.9, but it appears to be the golgi apparatus that is the peak at 2.4.
+Similarly, in the SwissProt filtered dataset the mitochondria lies at 1.9, but it appears to be the Golgi apparatus that is the peak at 2.4.
 
 With such a strong hydrophobic difference that, as we saw in the species, may not be solely accounted for by adaptation to the different membrane compositions, it is important to consider if a cryptic targetting signal exists within the \gls{tmh} themselves for \gls{ta} proteins.
 The linguistic sequence entropy of the \gls{tmh} string as well as the disorder were also examined.
@@ -167,8 +167,8 @@ However this stark difference cannot be observed in the SwissProt set.
 This is unsurprising given that the hydrophobic nature of the \gls{tmh}s demands that certain residues must be overrepresented, which lowers the sequence entropy.
 In this case, we have a highly hydrophobic set, the \gls{pm} UniProt set, which likely contains a higher proportion of the most hydrophobic residues.
 
-When considering disorder, we see in both datasets that the golgi subset is the most negative at -0.2 with \gls{tmh} and -0.25 with the flanks in both the UniProt manually curated and the SwissProt filtered datasets.
-Whereas mitochondria is the least negative in both cases when considering the \gls{tmh}(-0.14 in UniProt and -0.13 in Swissprot) or the \gls{tmh} and $\pm$5 flanking residues (-0.18 in UniProt and -0.16 in Swissprot).
+When considering disorder, we see in both datasets that the Golgi subset is the most negative at -0.2 with \gls{tmh} and -0.25 with the flanks in both the UniProt manually curated and the SwissProt filtered datasets.
+Whereas mitochondria is the least negative in both cases when considering the \gls{tmh} (-0.14 in UniProt and -0.13 in Swissprot) or the \gls{tmh} and $\pm$5 flanking residues (-0.18 in UniProt and -0.16 in Swissprot).
 
 \begin{figure}[!ht]
 \centering
@@ -213,7 +213,9 @@ It is indeed possible that our observations are adaptations to the membrane envi
 Here, we postulate that there is indeed biological information held within the \gls{tmh} itself that allows the protein to be specifically targetted to a destiantion.
 This is almost certainly aided by other factors and is part of a system with several redundant mechanisms.
 
+This could indeed be a cryptic functional similarity to the signal anchored proteins.
 Signal anchored proteins, proteins that contain a single hydrophobic segment that serves as both a mitochondrial targeting signal and a membrane anchor, as well as tail-anchored proteins have been shown to be able to spontaneously insert into the membrane independently from the translocon~\cite{Elisa2012, Lan2000, Colombo2009}.
+
 The idea that \gls{snare} proteins are modular and capable of spontaneous insertion has significant implications for both biomedical application in liposome-based drug delivery and can aid future research for testing complex biological molecular networks~\cite{Allen2013, Nordlund2014}.
 
 \section{Methods}
